2004-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-tex.scm (header-to-file): Fix.

2004-09-22  Werner Lemberg  <wl@gnu.org>

	* lily/parser.yy <score_body>: Fix typo.

2004-09-22  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/tutorial.itely: modified a "future planning" comment.

	* Documentation/user/notation.itely: more editing.

2004-09-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (note-by-number): read font-size
	to determine stem length. Fixes: markup-note.ly

2004-09-21  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur.cc (outside_slur_callback): read #'padding for
	slur-padding. Fixes: slur-script.ly

	* lily/parser.yy (score_body): disallow \bookpaper in \score.

2004-09-21  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/notation.itely (ancient flags): documented
	flags-related known bugs

	* lily/include/ligature-engraver.hh: added comment about why and
	how of (non-)use of abstract virtual methods

	* ly/engraver-init.ly (VaticanaVoice,
	GregorianTranscriptionVoice): bugfix (workaround): TextSpanner:
	unset dash-fraction property in order to get solid lines

	* ly/engraver-init.ly (MensuralStaff): fixed bad comment

2004-09-21  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/convert-ly.py (ly): Corrected replacement of \scriptBoth

2004-09-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/parse-scm.cc (internal_ly_parse_scm): Eval in module, not
	in function.

	* scm/framework-tex.scm (convert-to-dvi): Use nonstopmode.  Set
	openout_any=p.  Throughout: progress to stderr, translate user
	messages.

	* scm/output-gnome.scm: Fix font dir description.

2004-09-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/test/mensural-ligatures.ly (voice): move linethickness
	settings to bookpaper.

	* lily/simple-spacer.cc (Module): use force to stretch to 
	line length as force measure for ragged spacing.
	
	* lily/lily-parser.cc (get_paper): don't set parent for \paper