@@ -1,3 +1,11 @@
+2004-09-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/beam-concave.cc (calc_concaveness): take absolute value of
+	dy for scaling. This fixes various downbeams.
+	
+
+	* lily/beam-quanting.cc (best_quant_score_idx): 
+
 2004-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scm/framework-tex.scm (header-to-file): Fix.
